refactor, add Mapper <-> XML navigation, references and quick-fix